@@ -1,5 +1,10 @@
 2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* main.c (main): don't use SystemCharset for default of
+		DisplayChaset, DocumentCharset
+
+2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* w3m 0.5
 	* version.c.in: update
 	* doc/README: version 0.5, release date, maintainer
@@ -8336,4 +8341,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.909 2004/03/21 18:45:05 ukai Exp $
+$Id: ChangeLog,v 1.910 2004/03/22 03:32:27 ukai Exp $
